With New Screens

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -41,7 +41,7 @@
           "EMAIL"
         ],
         "verificationMechanisms": [
-          "EMAIL"
+          "PHONE_NUMBER"
         ]
       },
       "providerPlugin": "awscloudformation",
