--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "amazon-cognito-identity-js": "^6.3.1",
     "aws-amplify": "^5.3.3",
     "aws-amplify-react-native": "^7.0.2",
+    "base-64": "^1.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-native": "0.72.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-maps": "1.3.2",
@@ -53,6 +55,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
